Fixed awkward spacing

--- a/_sass/3-sections/posts.sass
+++ b/_sass/3-sections/posts.sass
@@ -2,11 +2,16 @@
 	.box
 		color: $text-color
 		padding-bottom: 0
-		margin-bottom: 15px
+		height: 250px
+		padding-top: 50px
+		margin-bottom: 50px
 		.info
 			text-align: left
-			font-size: 13px
+			font-size: 15px
+			margin-top: 100px
 	.title
+		margin-top: 120px
+		margin-bottom: 50px
 		h1
 			font-size: 30px
 		hr
